--- a/app.json
+++ b/app.json
@@ -75,7 +75,9 @@
     "extras": [
         "resources/images",
         "resources/icons",
-        "resources/loading"
+        "resources/loading",
+		"date.json",
+		"file.json"
     ],
 
     /**
